# HR-digitalemployee

./: .gitignore  ASSUMPTIONS.md  GLOSSARY.md  README.md  pyproject.toml
md/: design.md  progress.md  prompt.md  requirement.md  test.md
md/modules/: module-1-intake-extraction.md  module-2-scoring-engine.md  module-3-ai-content-generation.md  module-4-fairness-compliance.md  module-5-presentation-layer.md  module-6-scheduling-coordination.md  module-7-governance-audit.md
src/hr_digital_employee/: __init__.py  cli.py  pipeline.py
src/hr_digital_employee/ai_content/: __init__.py  anchoring.py  content_service.py  hallucination_audit.py  interfaces.py  interview_questions.py  llm_provider.py  models.py  red_flags.py  summary_generator.py
src/hr_digital_employee/fairness_compliance/: __init__.py  access_requests.py  adverse_impact.py  consent.py  explainability.py  interfaces.py  jurisdiction.py  models.py  retention.py  skill_ontology_store.py
src/hr_digital_employee/governance_audit/: __init__.py  audit_log.py  interfaces.py  models.py  sqlite_audit_log.py
src/hr_digital_employee/intake_extraction/: __init__.py  channel_adapters.py  dedup.py  extraction.py  gateway.py  injection_screening.py  interfaces.py  manual_review_queue.py  models.py  ocr.py  pdf_text.py  text_extraction_log.py
src/hr_digital_employee/jrp_editor/: __init__.py  app.py  config_builder.py  launcher.py
src/hr_digital_employee/presentation/: __init__.py  app.py  dashboard_data.py  launcher.py
src/hr_digital_employee/scheduling_coordination/: __init__.py
src/hr_digital_employee/scoring_engine/: __init__.py  curves.py  engine.py  interfaces.py  jrp_config.py  jrp_repository.py  models.py  profile_adapter.py  skill_ontology.py  weight_templates.py
tests/: image_fixtures.py  pdf_fixtures.py  test_architectural_invariants.py  test_pipeline.py
tests/ai_content/: test_anchoring.py  test_content_service.py  test_hallucination_audit.py  test_interfaces.py  test_interview_questions.py  test_llm_provider.py  test_red_flags.py  test_summary_generator.py
tests/fairness_compliance/: test_access_requests.py  test_adverse_impact.py  test_consent.py  test_explainability.py  test_interfaces.py  test_jurisdiction.py  test_retention.py  test_skill_ontology_store.py
tests/governance_audit/: test_audit_log.py  test_sqlite_audit_log.py
tests/intake_extraction/: test_channel_adapters.py  test_dedup.py  test_extraction.py  test_gateway.py  test_injection_screening.py  test_interfaces.py  test_manual_review_queue.py  test_models.py  test_ocr.py  test_pdf_text.py  test_text_extraction_log.py
tests/integration/: test_cli.py  test_intake_to_scoring_pipeline.py
tests/jrp_editor/: test_app.py  test_config_builder.py
tests/presentation/: test_app.py  test_dashboard_data.py
tests/scoring_engine/: test_curves.py  test_engine.py  test_interfaces.py  test_jrp_config.py  test_jrp_repository.py  test_models.py  test_profile_adapter.py  test_skill_ontology.py  test_weight_templates.py
