[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-digital-employee"
version = "0.1.0"
description = "HR Digital Employee: automated resume screening and interview scheduling"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[project.scripts]
hr-digital-employee = "hr_digital_employee.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pytesseract"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["hr_digital_employee"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
