[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-digital-employee"
version = "0.1.0"
description = "HR Digital Employee: automated resume screening and interview scheduling"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[project.scripts]
hr-digital-employee = "hr_digital_employee.cli:main"
hr-digital-employee-jrp-editor = "hr_digital_employee.jrp_editor.launcher:main"
hr-digital-employee-dashboard = "hr_digital_employee.presentation.launcher:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0",
]
ui = [
    "streamlit>=1.38",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
# 3.12, not the project's 3.11 floor (requires-python above): numpy's bundled stub (pulled in
# transitively by the optional `ui` extra's streamlit -> pandas -> numpy chain) uses PEP 695 `type`
# statement syntax mypy only parses at python_version >= 3.12. This only loosens what stub syntax
# mypy's parser accepts -- it does not change requires-python, and this project writes no 3.12-only
# syntax itself (ruff's target-version below stays "py311" and would need to be bumped too before
# that became possible without notice).
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pytesseract"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true
follow_imports = "skip"


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["hr_digital_employee"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
